more classification models

--- a/EDA_Titanic.ipynb
+++ b/EDA_Titanic.ipynb
@@ -1289,7 +1289,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x140e0c990>"
+       "<seaborn.axisgrid.FacetGrid at 0x138dc5810>"
       ]
      },
      "execution_count": 21,
@@ -1493,7 +1493,7 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x140fd08d0>"
+       "<seaborn.axisgrid.FacetGrid at 0x1394ebf10>"
       ]
      },
      "execution_count": 27,
@@ -2645,8 +2645,8 @@
    ],
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
-    "accuracy = confusion_matrix(y_test, predictions)\n",
-    "accuracy"
+    "accuracy_logistic = confusion_matrix(y_test, predictions)\n",
+    "accuracy_logistic"
    ]
   },
   {
@@ -2667,8 +2667,8 @@
    ],
    "source": [
     "from sklearn.metrics import accuracy_score\n",
-    "accuracy = accuracy_score(y_test, predictions)\n",
-    "accuracy"
+    "accuracy_logistic = accuracy_score(y_test, predictions)\n",
+    "accuracy_logistic"
    ]
   },
   {
@@ -2678,11 +2678,230 @@
     "Not bad results for a simple logistic regression.\n",
     "Finding the best model and fine tuning would be another task. \n",
     "\n",
-    "You might want to explore other feature engineering and the other titanic_text.csv file, some suggestions for feature engineering:\n",
+    "You might want to explore other feature engineering options:\n",
     "\n",
     "Try grabbing the Title (Dr.,Mr.,Mrs,etc..) from the name as a feature\n",
     "Maybe the Cabin letter could be a feature\n",
     "Is there any info you can get from the ticket?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Other classification methods\n",
+    "\n",
+    "Let's try some other classification methods such as:\n",
+    "\n",
+    "- Random Forest\n",
+    "- Gradient Boosting\n",
+    "- SVM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8202247191011236"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "rf_model = RandomForestClassifier(# bootstrap=True, \n",
+    "                                  random_state=101,\n",
+    "                                  # n_estimators=100,\n",
+    "                                  # min_samples_split=2\n",
+    "                                  )\n",
+    "rf_model.fit(X_train, y_train)\n",
+    "rf_predictions = rf_model.predict(X_test)\n",
+    "rf_accuracy = accuracy_score(y_test, rf_predictions)\n",
+    "rf_accuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gradient Boosting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gradient Boosting Accuracy: 0.8426966292134831\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "\n",
+    "gb_model = GradientBoostingClassifier(n_estimators=100, learning_rate=0.01, random_state=42)\n",
+    "gb_model.fit(X_train, y_train)\n",
+    "\n",
+    "gb_predictions = gb_model.predict(X_test)\n",
+    "\n",
+    "gb_accuracy = accuracy_score(y_test, gb_predictions)\n",
+    "print(\"Gradient Boosting Accuracy:\", gb_accuracy)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %pip install xgboost"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBoost Accuracy: 0.8389513108614233\n"
+     ]
+    }
+   ],
+   "source": [
+    "# XGBoost\n",
+    "from xgboost import XGBClassifier\n",
+    "\n",
+    "xgb_model = XGBClassifier(n_estimators=100, learning_rate=0.01, random_state=42)\n",
+    "xgb_model.fit(X_train, y_train)\n",
+    "\n",
+    "xgb_predictions = xgb_model.predict(X_test)\n",
+    "\n",
+    "xgb_accuracy = accuracy_score(y_test, xgb_predictions)\n",
+    "print(\"XGBoost Accuracy:\", xgb_accuracy)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SVM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVM Accuracy: 0.6591760299625468\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "svm_model = SVC(kernel='rbf', C=1.0)  # 'rbf' is the default kernel, good for non-linear problems\n",
+    "svm_model.fit(X_train, y_train)\n",
+    "\n",
+    "svm_predictions = svm_model.predict(X_test)\n",
+    "\n",
+    "svm_accuracy = accuracy_score(y_test, svm_predictions)\n",
+    "print(\"SVM Accuracy:\", svm_accuracy)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 Model  Accuracy\n",
+      "0  Logistic Regression  0.827715\n",
+      "1        Random Forest  0.820225\n",
+      "2    Gradient Boosting  0.842697\n",
+      "3              XGBoost  0.838951\n",
+      "4                  SVM  0.659176\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Store accuracy scores in a dictionary\n",
+    "accuracy_scores = {\n",
+    "    \"Logistic Regression\": accuracy_logistic,\n",
+    "    \"Random Forest\": rf_accuracy,\n",
+    "    \"Gradient Boosting\": gb_accuracy,\n",
+    "    \"XGBoost\": xgb_accuracy,\n",
+    "    \"SVM\": svm_accuracy\n",
+    "}\n",
+    "\n",
+    "# Convert dictionary to DataFrame\n",
+    "results_df = pd.DataFrame(list(accuracy_scores.items()), columns=[\"Model\", \"Accuracy\"])\n",
+    "\n",
+    "# Display the table\n",
+    "print(results_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+---------------------+--------------------+\n",
+      "|   |        Model        |      Accuracy      |\n",
+      "+---+---------------------+--------------------+\n",
+      "| 0 | Logistic Regression | 0.8277153558052435 |\n",
+      "| 1 |    Random Forest    | 0.8202247191011236 |\n",
+      "| 2 |  Gradient Boosting  | 0.8426966292134831 |\n",
+      "| 3 |       XGBoost       | 0.8389513108614233 |\n",
+      "| 4 |         SVM         | 0.6591760299625468 |\n",
+      "+---+---------------------+--------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tabulate import tabulate\n",
+    "\n",
+    "print(tabulate(results_df, headers=\"keys\", tablefmt=\"pretty\"))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The highest accuracy was obtained by the Gradient Boosting model."
    ]
   }
  ],
